[package]
name = "graph-editor"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Draw graph online"
repository = "https://github.com/oovm/graph-editor"
documentation = "https://docs.rs/graph-editor"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
